Fixed the routing

--- a/static/index.html
+++ b/static/index.html
@@ -108,6 +108,6 @@
   </div>
 
   <div id="predictionResult" class="container mt-2 py-5"></div>
-  <script src="script/app.js" defer></script>
+  <script src="/static/Script/app.js" defer></script>
 </body>
 </html>
